commit Entrega Final

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -177,8 +177,8 @@
                     Animáte a congestinar para un mejor crecimiento muscular.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">¡Empieza ya!</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutinas</a>
                     </div>
                   </div>
                 </div>
@@ -197,8 +197,8 @@
                     Ejercicos aeróbicos para sentirte mejor durante el todo el día.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">¡Empieza ya!</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutinas</a>
                     </div>
                   </div>
                 </div>
@@ -217,8 +217,8 @@
                     Consigue mejor flexibilidad y postura corporal con nuestros estiramientos.</p>
                   <div class="row">
 
-                    <div class="col-xs-12 col-md-6">
-                      <a class="btn btn-dark" href="#">¡Empieza ya!</a>
+                    <div class="col-xs-12 col-md-8">
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutinas</a>
                     </div>
                   </div>
                 </div>
@@ -258,12 +258,12 @@
                 <div class="pricing-description text-left">
                   <div class="list mt-3 mb-4 ml-4">
                     <p class="pl-3 pr-3">Acceso a nuestro contenido gratuito.</p>
-                    <p class="pl-3 pr-3">Regístrate sin tener que pagar ni dar tarjeta de crédito.</p>
+                    <p class="pl-3 pr-3">Regístrate y paga sólo las rutinas que contrates de contenido premium.</p>
                   </div>
                 </div>
                 <!-- Button -->
                 <div class="pricing-button pb-4">
-                  <button type="button" class="btn btn-lg btn-dark w-75">¡Regístrate ahora!</button>
+                  <button type="button" class="btn btn-lg btn-dark w-75" >¡Regístrate ahora!</button>
                 </div>
               </div>
             </div>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="pricing-description text-left">
                   <div class="list mt-3 mb-4 ml-4">
-                    <p class="pl-3 pr-3">Todo lo gratuito más nuestro contenido premium.</p>
+                    <p class="pl-3 pr-3">Todo lo gratuito más nuestro contenido premium con el 50% de descuento.</p>
                     <p class="pl-3 pr-3">Cancela en cualquier momento.</p>
 
                   </div>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="pricing-description text-left">
                   <div class="list mt-3 mb-4 ml-4">
-                    <p class="pl-3 pr-3">Todo el contenido gratuito y primium más estrenos especiales.</p>
+                    <p class="pl-3 pr-3">Todo lo gratuito más nuestro contenido premium con el 50% de descuento.</p>
                     <p class="pl-3 pr-3">Ahorra más de 50 €</p>
                     <p class="pl-3 pr-3">Cancela en cualquier momento.</p>
                   </div>
@@ -341,7 +341,7 @@
                     Entrenamiento completo de pectorales.</p>
                   <div class="row">
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
@@ -361,7 +361,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
@@ -381,7 +381,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
@@ -401,7 +401,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
@@ -421,7 +421,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
@@ -441,7 +441,7 @@
                   <div class="row">
 
                     <div class="col-xs-12 col-md-8">
-                      <a class="btn btn-dark" href="#">Accede al registro</a>
+                      <a class="btn btn-dark" href="web-pages/buscar-rutina.html">Buscar rutina</a>
                     </div>
                   </div>
                 </div>
