--- a/src/main/webapp/web-pages/InscripcioRutina.html
+++ b/src/main/webapp/web-pages/InscripcioRutina.html
@@ -26,8 +26,8 @@
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/usuario.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -148,8 +148,8 @@
                     </div>
                     <div class="row">
                         
-                        <h3 class=" col-md-8 mt-4">Descrpció</h3>
-                        <label for="descrpcio" class="mt-4" id="descrpcio"></label>
+                        <h3 class=" col-md-8 mt-4">Descripció</h3>
+                        <label for="descripcio" class="mt-4" id="descripcio"></label>
                     
                     </div>
                     <div class="col-12">
@@ -236,12 +236,12 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <!--
     <!-- Custom scripts -->
-    <!--<script src="../js/login.js"></script>
+    <script src="../js/login.js"></script>
 
     <!-- Carregar CDN axios -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Script de validació Buscar-rutina.html -->
-    <!--<script src="../js/usuario.js"></script>-->
+    <script src="../js/inscripcionsRutina.js"></script>
 
   </body>
 
