--- a/src/main/webapp/web-pages/ModificarUsuario.html
+++ b/src/main/webapp/web-pages/ModificarUsuario.html
@@ -27,8 +27,8 @@
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/usuario.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -39,11 +39,11 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
-               <ul>
-                <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
-                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
-               </ul> 
+              <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
+              <ul>
+               <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
+               <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
+              </ul> 
             </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
@@ -100,15 +100,13 @@
                     <div class="form-group col-md-12"> <label for="adreca">Dirección</label> <input type="text" class="form-control" name="adreca"
                         id="adreca"  required="" size="100"> </div>
 
-
                     <div class="form-group col-md-12"> <label for="poblacio">Población</label> <input type="text" class="form-control" name="poblacio"
                         id="poblacio"  required=""> </div>
 
                     <div class="form-group col-md-12"> <label for="provincia">Provincia</label> <input type="text" class="form-control" name="provincia"
                         id="provincia"  required=""> </div>
 
-                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i
-                      class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
+                    <div class="form-group col-md-12"> <label for="password">Contraseña Nueva</label> <span class="btn-show-pass"> <i class="bi bi-eye-fill"></i></span><input type="password" class="form-control" name="password"
                         id="password" placeholder="Escriba su Contraseña"  
                         title="Ha de tener uno o más números, una letra mayúscula, una letra minúscula y 8 o más caracteres."> </div>
                   </div>
