--- a/src/main/webapp/web-pages/EliminarModalidad.html
+++ b/src/main/webapp/web-pages/EliminarModalidad.html
@@ -26,8 +26,8 @@
     <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/administrador.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -50,10 +50,10 @@
               <a class="nav-link mr-5 pr-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="datos">Contenido</a>
-               <ul>
-                <li><a id="logout" href="../index.html">Log Out</a></li>
-               </ul> 
+                <a class="nav-link" id="datos" href="#">Contenido</a>
+                <ul>
+                  <li><a id="logout" href="../index.html">Log Out</a></li>
+                 </ul> 
             </li>
           </ul>
         </div>
@@ -82,16 +82,7 @@
               </div>
                                   <hr class="mt-3 mb-4">
               <form id="form">
-                <!-- <div class="row">
-                  <label id="nombre" for="nombre" class="espacio">Nombre</label>
-                  <label  id="descripcion" for="descripcion" class="espacio">Descripcion</label>
-                  <button id="eliminarNom" class="btn btn-dark mt-3 mt-sm-0 btn-s espacio">Eliminar</button>
-              </div>
-                                  <div class="row">
-                  <label for="nombre" class="espacio">Nombre</label>
-                  <label for="descripcion" class="espacio">Descripcion</label>
-                  <button class="btn btn-dark mt-3 mt-sm-0 btn-s espacio">Eliminar</button>
-              </div> -->
+
               </form>
           </div>
         </div>
