--- a/src/main/webapp/web-pages/buscar-rutina-usuario.html
+++ b/src/main/webapp/web-pages/buscar-rutina-usuario.html
@@ -26,8 +26,8 @@
         <header>
       <nav id="navbar-color" class="navbar navbar-expand-xl navbar-dark">
         <a class="navbar-brand ml-3 mb-5 mb-lg-0" href="../web-pages/usuario.html">
-            <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
-        </a>
+          <img src="../img/HT_Logo3.png" width="125"  alt="Logo de Home Training" />
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,12 +38,12 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/usuario.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
-               <ul>
-                <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
-                <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
-               </ul> 
-            </li>
+              <a class="nav-link mr-5 pr-5" href="#" >Programas</a>
+             <ul>
+              <li><a href="../web-pages/buscar-rutina-usuario.html">Buscar Rutinas</a></li>
+              <li><a href="../web-pages/Inscripcions.html">Inscripciones</a></li>
+             </ul> 
+          </li>
             <li class="nav-item">
               <a class="nav-link mr-5" href="#">Acerca de nosotros</a>
             </li>
@@ -54,7 +54,7 @@
               <a class="nav-link mr-5 pr-5" href="../web-pages/ContactoLogado.html">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="datos">Datos</a>
+                <a class="nav-link" id="datos" href="#">Datos</a>
                <ul>
                 <li><a href="../web-pages/ModificarUsuario.html">Modificar datos</a></li>
                 <li><a href="../web-pages/BajaUsuario.html">Baja</a></li>
@@ -115,6 +115,7 @@
             <label for="">Preu</label>
             <select class="form-control" id="preu" name="preu">
               <option selected>Selecciona el preu</option>
+                   <option>0</option>
                     <option>20</option>
                     <option>30</option>
                     <option>40</option>
@@ -124,7 +125,6 @@
             </select>
           </div>
         </div>
-
         <!-- Programas -->
         <div class="rutinas-container">
           <div class="mensaje-error">
@@ -137,20 +137,20 @@
             <!-- Presentacion de programas -->
           </div>
           <template id="template-card">
-            <div class="col-12 mb-2 col-md-4">
-              <div class="card">
+            <div id="todo" class="col-12 mb-2 col-md-4">
+              <div class="card" id="card">
                 <img src="#" alt="" class="card-img-top">
                 <div class="card-body">
                   <h5>Rutina</h5>
                   <p>Descripcio</p>
-                  <button class="btn btn-dark">Seleccionar</button>
+                  <button class="btn btn-dark" >Seleccionar</button>
                 </div>
               </div>
             </div>
           </template>
         </div>
         <!-- ./Programas -->
-
+        
       </section>
 
     </main>
